add predefined list of locations
