# api/src/routes/locations.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { getLocations } from '../controllers/locations.js';
+
+const router = Router();
+
+router.get('/', getLocations);
+
+export default router;
